Makefile coding style

--- a/naxos-beta/Makefile
+++ b/naxos-beta/Makefile
@@ -1,40 +1,23 @@
-#  Uncomment the following line, for Sun compilation at di.uoa.gr domain.
-#CPATH = /usr/sfw/bin/
-
 #  Comment out the following line, for gcc versions less than 4.3.
 STANDARD = -std=c++0x
 
-
-
-####  COMPILER  ####
-
-CXX      = $(CPATH)g++
+### COMPILER ###
+CXX = g++
 WARNINGS = -pedantic -Wall -W -Wshadow
 CXXFLAGS = $(WARNINGS) $(STANDARD) -O2
 
-
-
-####  FILENAMES  ####
-
+### FILENAMES ###
 HEADERS = naxos.h internal.h stack.h
 SOURCES = problemmanager.cpp expressions.cpp var_constraints.cpp array_constraints.cpp intvar.cpp bitset_domain.cpp
-
 OBJECTS = $(SOURCES:.cpp=.o)
 
-
-
-####  BUILDING  ####
-
+### BUILDING ###
 .PHONY: all
 all: $(OBJECTS)
-
 %.o:  %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c  $<
 
-
-
-####  CLEANING  ####
-
+### CLEANING ###
 .PHONY: clean
 clean:
 	$(RM)  $(OBJECTS)
