Dump mapper input on demand
Also fix bug: When there was an empty stdin, the mapper explored the whole search space.

--- a/naxos-beta/examples/Makefile
+++ b/naxos-beta/examples/Makefile
@@ -22,7 +22,7 @@ HEADERS = $(addprefix $(NAXOS)/, naxos.h internal.h stack.h)
 all: $(PROGRAMS)
 $(OBJECTS):   %.o:   %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $<  -o $@
-$(PR_OBJECTS):   %.o:   %.cpp
+$(PR_OBJECTS):   %.o:   %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -I$(NAXOS) -c  $<
 $(PROGRAMS):   %:   $(OBJECTS) %.o
 	$(LD) $(LDFLAGS) $^  -o $@
