Fix libraries folder names

--- a/apps/ITC/Makefile
+++ b/apps/ITC/Makefile
@@ -7,9 +7,9 @@
 STANDARD = -std=c++0x
 #LDFLAGS2 = -Wl,--enable-auto-import
 
-NDIR = ../naxos-beta
-NDIR_AC = ../naxos-AC
-ADIR = ../amorgos
+NDIR = ../../core
+NDIR_AC = ../../naxos-AC
+ADIR = ../../amorgos
 
 CC = $(CPATH)g++
 WFLAGS = -pedantic -Wall -W -Wshadow
