--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,6 @@
-script:
- - cd core/
- - make
- - cd -
- - cd apps/
- - make
- - cd -
- - cd apps/ITC/
- - make
- - cd -
- - cd apps/CELAR/
- - make
- - cd -
- - cd hadoop/
- - make
- - cd -
+language: cpp
+script: cd core/ && make
+script: cd apps/ && make
+script: cd apps/ITC/ && make
+script: cd apps/CELAR/ && make
+script: rd hadoop/ && make
