--- a/apps/CELAR/Makefile
+++ b/apps/CELAR/Makefile
@@ -157,3 +157,7 @@ TODEL = $(PROG) $(PROG).exe $(OBJS) $(PROG_AC) $(PROG_AC).exe $(OBJS_AC) $(DEBPR
 .PHONY: clean
 clean :
 	$(RM)  $(TODEL)
+
+### TESTING ###
+.PHONY: test
+test: ;
