--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - BUILD_DIR="apps/CELAR/"
     - BUILD_DIR="apps/hadoop/"
 
-script: cd $BUILD_DIR && make && make test
+script: cd $BUILD_DIR && make && make test && cd -
 
 after_success:
   - coveralls --gcov-options "\-lp"
