--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# This is used by Travis CI site in order
+# to build and test the library online.
+
 language: cpp
 
 before_install:
@@ -16,4 +19,4 @@ env:
 script: cd $BUILD_DIR && make && make test && cd -
 
 after_success:
-  - coveralls --gcov-options "\-lp" -b $BUILD_DIR
+  - coveralls
