Compile ACvsBC apps

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ env:
     - COVERAGE="--coverage"
   matrix:
     - BUILD_DIR="apps/"
-    - BUILD_DIR="apps/ITC/"
+    - BUILD_DIR="apps/ACvsBC/"
     - BUILD_DIR="apps/CELAR/"
+    - BUILD_DIR="apps/ITC/"
     - BUILD_DIR="apps/hadoop/"
 
 script: cd $BUILD_DIR && make && make test && cd -
