Make validation more verbose

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -35,6 +35,9 @@ clean:
 ### TESTING ###
 .PHONY: test
 test:
-	./nqueens 4  | sort | cmp - verification/nqueens_4_sorted_results.txt
-	./nqueens    | sort | cmp - verification/nqueens_8_sorted_results.txt
-	./nqueens 12 | sort | cmp - verification/nqueens_12_sorted_results.txt
+	# Validate 4 Queens solutions
+	./nqueens 4 | sort | cmp - verification/nqueens_4_sorted_solutions.txt
+	# Validate 8 Queens solutions
+	./nqueens | sort | cmp - verification/nqueens_8_sorted_solutions.txt
+	# Validate 12 Queens solutions
+	./nqueens 12 | sort | cmp - verification/nqueens_12_sorted_solutions.txt
