Download validator for ITC solutions
From the page
http://www.cs.qub.ac.uk/itc2007/curriculmcourse/course_curriculm_index_files/validation.htm

--- a/apps/ITC/Makefile
+++ b/apps/ITC/Makefile
@@ -126,5 +126,7 @@ clean :
 	$(RM)  $(TODEL)
 
 ### TESTING ###
+SECONDS=$(shell cd datasets && yes | ./benchmark_my_linux_machine | grep "seconds" | grep -o "[[:digit:]]*")
 .PHONY: test
-test: ;
+test:
+	echo $(SECONDS)
