Validate an ITC solution

--- a/apps/ITC/Makefile
+++ b/apps/ITC/Makefile
@@ -16,8 +16,8 @@ CDEBFLAGS = $(COMPFLAGS) -g3
 NCFLAGS = $(WFLAGS) $(STANDARD) -O2 $(COVERAGE)
 ACFLAGS = $(WFLAGS) $(STANDARD) -I$(NDIR) -O2 $(COVERAGE)
 ACFLAGS_AC = $(WFLAGS) $(STANDARD) -I$(NDIR_AC) -O2 $(COVERAGE)
-NCDEBFLAGS = $(WFLAGS) -g3
-ACDEBFLAGS = $(WFLAGS) -I$(NDIR) -g3
+NCDEBFLAGS = $(WFLAGS) $(STANDARD) -g3
+ACDEBFLAGS = $(WFLAGS) $(STANDARD) -I$(NDIR) -g3
 CPROFFLAGS = $(CDEBFLAGS) -pg
 
 LD = $(CC)
@@ -120,7 +120,17 @@ clean:
 	$(RM) $(TODEL)
 
 ### TESTING ###
-SECONDS=$(shell cd datasets && yes | ./benchmark_my_linux_machine | grep "seconds" | grep -o "[[:digit:]]*")
 .PHONY: test
 test:
-	echo $(SECONDS)
+	# Compile the official validator
+	g++ verification/validator.cc -o verification/validator
+	# Find and configure the available time for searching a solution
+	AVAILABLE_SECONDS=$(shell cd datasets && \
+		yes | ./benchmark_my_linux_machine | \
+		grep "seconds" | grep -o "[[:digit:]]*") && \
+	sed -i "s/^\(timeLimit\) .*/\1 $$AVAILABLE_SECONDS/" optionsFile && \
+	sed -i "s/^\(timeLimitDirectMethodRound\) .*/\1 $$AVAILABLE_SECONDS/" optionsFile
+	# Execute the curriculum based course timetabling solver
+	./itc_solver datasets/ITC01.ctt ITC01.sol -options optionsFile
+	# Validate the last solution found
+	verification/validator ITC01.sol
