Re-enable all the tests
Stop trying to debug Coveralls report regarding the
'apps/ITC' folder. The bug is on their side: "The files show
the lines covered properly, but there's no percentage per
file." See lemurheavy/coveralls-public#734 and
lemurheavy/coveralls-public#281.

This reverts commit
df422f880e2ed6232990be45d1db5ed07947b0a1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,11 @@ env:
   global:
     - COVERAGE="--coverage"
   matrix:
+    - BUILD_DIR="apps/"
+    - BUILD_DIR="apps/ACvsBC/"
+    - BUILD_DIR="apps/CELAR/"
     - BUILD_DIR="apps/ITC/"
+    - BUILD_DIR="apps/hadoop/"
 
 script: cd $BUILD_DIR && make && make test && cd -
 
