--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
     - BUILD_DIR="apps/ITC/"
     - BUILD_DIR="apps/hadoop/"
 
-script: cd $BUILD_DIR && make && make test && cd -
+script: cd $BUILD_DIR && make -j && make test && cd -
 
 after_success:
   - coveralls -b $BUILD_DIR
