Double the number of workers

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ env:
     - BUILD_DIR="apps/ITC/"
     - BUILD_DIR="apps/hadoop/"
 
-script: cd $BUILD_DIR && make -j $(nproc) && make test && cd -
+script:
+    - echo "$(nproc) available cores"
+    - cd $BUILD_DIR && make -j $((2 * $(nproc))) && make test && cd -
 
 after_success:
   - coveralls -b $BUILD_DIR
