--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - BUILD_DIR="apps/ACvsBC/"
     - BUILD_DIR="apps/CELAR/"
     - BUILD_DIR="apps/ITC/"
+      DATASET="comp01.ctt"
     - BUILD_DIR="apps/hadoop/"
 
 script:
