Test against more timetabling datasets

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,32 @@ env:
     - BUILD_DIR="apps/CELAR/"
     - BUILD_DIR="apps/ITC/"
       DATASET="comp01.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp02.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp03.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp04.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp05.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp06.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp07.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp08.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp09.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp10.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp11.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp12.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp13.ctt"
+    - BUILD_DIR="apps/ITC/"
+      DATASET="comp14.ctt"
     - BUILD_DIR="apps/hadoop/"
 
 script:
