Define search method through a variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,32 +14,46 @@ env:
     - BUILD_DIR="apps/ACvsBC/"
     - BUILD_DIR="apps/CELAR/"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp01.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="LDS"
       DATASET="comp02.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="IBROAD"
       DATASET="comp03.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="PoPS"
       DATASET="comp04.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DBS"
       DATASET="comp05.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp06.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DBS"
       DATASET="comp07.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp08.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp09.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp10.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp11.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp12.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp13.ctt"
     - BUILD_DIR="apps/ITC/"
+      SEARCH_METHOD="DFS"
       DATASET="comp14.ctt"
     - BUILD_DIR="apps/hadoop/"
 
