Simplify names of variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,58 +10,58 @@ env:
   global:
     - COVERAGE="--coverage"
   matrix:
-    - BUILD_DIR="apps/"
-    - BUILD_DIR="apps/ACvsBC/"
-    - BUILD_DIR="apps/CELAR/"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/"
+    - DIRECTORY="apps/ACvsBC/"
+    - DIRECTORY="apps/CELAR/"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp01.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="LDS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="LDS"
       DATASET="comp02.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="IBROAD"
+    - DIRECTORY="apps/ITC/"
+      METHOD="IBROAD"
       DATASET="comp03.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="PoPS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="PoPS"
       DATASET="comp04.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DBS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DBS"
       DATASET="comp05.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp06.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DBS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DBS"
       DATASET="comp07.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp08.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp09.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp10.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp11.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp12.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp13.ctt"
-    - BUILD_DIR="apps/ITC/"
-      SEARCH_METHOD="DFS"
+    - DIRECTORY="apps/ITC/"
+      METHOD="DFS"
       DATASET="comp14.ctt"
-    - BUILD_DIR="apps/hadoop/"
+    - DIRECTORY="apps/hadoop/"
 
 script:
-    - cd $BUILD_DIR
+    - cd $DIRECTORY
     - make -j
     - make test
     - cd -
 
 after_success:
-  - coveralls -b $BUILD_DIR
+  - coveralls -b $DIRECTORY
