Test a wider range of search methods

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,31 +29,31 @@ env:
       METHOD="DBS"
       DATASET="comp05.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="CREDIT 100"
       DATASET="comp06.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DBS"
+      METHOD="LAN 20"
       DATASET="comp07.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="DBDS"
       DATASET="comp08.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="BBS 100"
       DATASET="comp09.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="RDFS"
       DATASET="comp10.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="ISAMP 1000"
       DATASET="comp11.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="ONESAMP"
       DATASET="comp12.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="DOMAIN_SPLITTING"
       DATASET="comp13.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DFS"
+      METHOD="DOMAIN_SPLITTING FAIR"
       DATASET="comp14.ctt"
     - DIRECTORY="apps/hadoop/"
 
