Replace methods that don't produce solutions

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,25 +35,26 @@ env:
       METHOD="LAN 20"
       DATASET="comp07.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DBDS"
+      METHOD="BBS 100"
       DATASET="comp08.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="BBS 100"
+      METHOD="RDFS 100 1000"
       DATASET="comp09.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="RDFS 100 1000"
+      METHOD="GNS"
       DATASET="comp10.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="ISAMP 1000"
+      METHOD="FNS fSample"
       DATASET="comp11.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="ONESAMP"
+      METHOD="FNS fSampleMiddle"
+      METHOD_LOCAL_SEARCH="FNS fSampleExp"
       DATASET="comp12.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DOMAIN_SPLITTING"
+      METHOD="ISAMP 1000"
       DATASET="comp13.ctt"
     - DIRECTORY="apps/ITC/"
-      METHOD="DOMAIN_SPLITTING FAIR"
+      METHOD="ONESAMP"
       DATASET="comp14.ctt"
     - DIRECTORY="apps/hadoop/"
 
