Use infertile search methods in local search

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,18 +33,23 @@ env:
       DATASET="comp06.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="LAN 20"
+      METHOD_LOCAL_SEARCH="DBDS"
       DATASET="comp07.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="BBS 100"
+      METHOD_LOCAL_SEARCH="DFS RANDOM_VAR_HEUR"
       DATASET="comp08.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="RDFS 100 1000"
+      METHOD_LOCAL_SEARCH="DFS RANDOM_VAL_HEUR"
       DATASET="comp09.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="GNS"
+      METHOD_LOCAL_SEARCH="DOMAIN_SPLITTING"
       DATASET="comp10.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="FNS fSample"
+      METHOD_LOCAL_SEARCH="DOMAIN_SPLITTING FAIR"
       DATASET="comp11.ctt"
     - DIRECTORY="apps/ITC/"
       METHOD="FNS fSampleMiddle"
