--- a/apps/CELAR/Makefile
+++ b/apps/CELAR/Makefile
@@ -12,21 +12,21 @@ NDIR_AC = ../naxos-AC
 ADIR = ../../amorgos
 
 CC = $(CPATH)g++
-WFLAGS = -pedantic -Wall -W -Wshadow
+WFLAGS = -pedantic -Wall -W -Wshadow -Werror
 COMPFLAGS = $(WFLAGS) $(STANDARD) -I$(NDIR) -I$(ADIR)
 COMPFLAGS_AC = $(WFLAGS) $(STANDARD) -I$(NDIR_AC) -I$(ADIR)
-CFLAGS = $(COMPFLAGS) -O
-CFLAGS_AC = $(COMPFLAGS_AC) -O
+CFLAGS = $(COMPFLAGS) -O2 $(COVERAGE)
+CFLAGS_AC = $(COMPFLAGS_AC) -O2 $(COVERAGE)
 CDEBFLAGS = $(COMPFLAGS) -g3
-NCFLAGS = $(WFLAGS) $(STANDARD) -O
-ACFLAGS = $(WFLAGS) $(STANDARD) -I$(NDIR) -O
-ACFLAGS_AC = $(WFLAGS) $(STANDARD) -I$(NDIR_AC) -O
+NCFLAGS = $(WFLAGS) $(STANDARD) -O2 $(COVERAGE)
+ACFLAGS = $(WFLAGS) $(STANDARD) -I$(NDIR) -O2 $(COVERAGE)
+ACFLAGS_AC = $(WFLAGS) $(STANDARD) -I$(NDIR_AC) -O2 $(COVERAGE)
 NCDEBFLAGS = $(WFLAGS) -g3
 ACDEBFLAGS = $(WFLAGS) -I$(NDIR) -g3
 CPROFFLAGS = $(CDEBFLAGS) -pg
 
 LD = $(CC)
-LDFLAGS = -s $(LDFLAGS2)
+LDFLAGS = -s $(COVERAGE) $(LDFLAGS2)
 LDDEBFLAGS = $(LDFLAGS2)
 LDPROFFLAGS = $(LDDEBFLAGS) -pg
 
