--- a/amorgos/apps/Makefile
+++ b/amorgos/apps/Makefile
@@ -14,11 +14,11 @@ AMORGOS = ..
 ####  COMPILER  ####
 
 CXX      = $(CPATH)g++
-WARNINGS = -pedantic -Wall -W -Wshadow
-CXXFLAGS = $(WARNINGS) $(STANDARD) -O2
+WARNINGS = -pedantic -Wall -W -Wshadow -Werror
+CXXFLAGS = $(WARNINGS) $(STANDARD) -O2 $(COVERAGE)
 
 LD = $(CXX)
-LDFLAGS = -s
+LDFLAGS = -s $(COVERAGE)
 
 
 
