Compile Amorgos examples

--- a/amorgos/apps/Makefile
+++ b/amorgos/apps/Makefile
@@ -1,14 +1,11 @@
 #  Comment out the following line, for gcc versions less than 4.3.
 STANDARD = -std=c++0x
-
 # Naxos Directory
 NAXOS = ../../core/bounds-consistency
 # Amorgos Directory
 AMORGOS = ..
 
-
-
-####  COMPILER  ####
+# COMPILER
 
 CXX      = $(CPATH)g++
 WARNINGS = -pedantic -Wall -W -Wshadow -Werror
@@ -17,9 +14,7 @@ CXXFLAGS = $(WARNINGS) $(STANDARD) -O2 $(COVERAGE)
 LD = $(CXX)
 LDFLAGS = -s $(COVERAGE)
 
-
-
-####  FILENAMES  ####
+# FILENAMES
 
 PROGRAMS = cryptmult golfer graphcolor knump magic mapcolor nqueens placement sudoku vertexcover
 PR_OBJECTS = $(PROGRAMS:=.o)
@@ -31,9 +26,7 @@ OBJECTS = $(OBJECTS_NAXOS) $(OBJECTS_AMORGOS)
 HEADERS_NAXOS = $(addprefix $(NAXOS)/, naxos.h stack.h internal.h)
 HEADERS_AMORGOS = $(addprefix $(AMORGOS)/, heuristics.h onesamp.h dfs.h)
 
-
-
-####  BUILDING  ####
+# BUILDING
 
 .PHONY: all
 all: $(PROGRAMS)
@@ -50,10 +43,12 @@ $(PR_OBJECTS):   %.o:   %.cpp
 $(PROGRAMS):   %:   $(OBJECTS) %.o
 	$(LD) $(LDFLAGS) $^  -o $@
 
-
-
-####  CLEANING  ####
+# CLEANING
 
 .PHONY: clean
 clean:
 	$(RM)  $(PROGRAMS) $(PR_OBJECTS)
+
+# TESTING
+.PHONY: test
+test: ;
