--- a/apps/ACvsBC/Makefile
+++ b/apps/ACvsBC/Makefile
@@ -20,7 +20,7 @@ LDFLAGS = -s $(COVERAGE)
 
 ####  FILENAMES  ####
 
-PROGRAMS = NQUEENS MAGIC TSP CREW_SCHEDULING
+PROGRAMS = nqueens MAGIC TSP CREW_SCHEDULING
 PROGRAMS_AC = $(PROGRAMS:=.AC)
 
 PR_OBJECTS = $(PROGRAMS:=.o)
