Compare AC vs. BC efficiency in Magic Square CSP

--- a/apps/ACvsBC/Makefile
+++ b/apps/ACvsBC/Makefile
@@ -20,7 +20,7 @@ LDFLAGS = -s $(COVERAGE)
 
 ####  FILENAMES  ####
 
-PROGRAMS = nqueens magic TSP CREW_SCHEDULING
+PROGRAMS = nqueens magic_square TSP CREW_SCHEDULING
 PROGRAMS_AC = $(PROGRAMS:=.AC)
 
 PR_OBJECTS = $(PROGRAMS:=.o)
