Install the 'time' command

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@
 language: cpp
 
 before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq time
   - pip install --user cpp-coveralls
 
 env:
