--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,8 @@ env:
       DATASET="comp14.ctt"
       METHOD="ONESAMP"
 
+    - DIRECTORY="apps/XCSP3/"
+
     - DIRECTORY="apps/hadoop/"
 
     - DIRECTORY="amorgos/apps/"
